force-app/main/default/objects/Gas_Prices__c/Gas_Prices__c.object-meta.xml
<CustomObject>
    <label>Gas Prices</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Gas Prices #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gas Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>