force-app/main/default/objects/Gas_Prices__c/fields/Average_Fuel_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Fuel_Price__c</fullName>
    <label>Average Fuel Price</label>
    <summarizedField>Gas_Price_LineItem__c.Fuel_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Gas_Price_LineItem__c.Fuel_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Gas_Price_LineItem__c.Gas_Price__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>