force-app/main/default/objects/Gas_Prices__c/fields/Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Price__c</fullName>
    <formula>IF( Week_Count__c &gt; 0 , Average_Fuel_Price__c /  Week_Count__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>