force-app/main/default/objects/Gas_Prices__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <label>Month Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>