force-app/main/default/objects/Gas_Prices__c/fields/Week_Count__c.field-meta.xml
<CustomField>
    <fullName>Week_Count__c</fullName>
    <label>Week Count</label>
    <summaryFilterItems>
        <field>Gas_Price_LineItem__c.Fuel_Price__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Gas_Price_LineItem__c.Gas_Price__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>