force-app/main/default/objects/Gas_Prices__c/listViews/Oct_2021.listView-meta.xml
<ListView>
    <fullName>Oct_2021</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Fuel_Price__c</columns>
    <columns>Month_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Month_Year__c</field>
        <operation>equals</operation>
        <value>10/1/2021</value>
    </filters>
    <label>Oct-2021</label>
</ListView>